# Nexus-Agent

./: .editorconfig  .gitignore  .tarpaulin.toml  AGENT_BRAIN_UPGRADE.md  ARCHITECTURE.md  BRAIN_V2_UPGRADE.md  Cargo.toml  FOLDER_STRUCTURE.md  Makefile  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  README.md  rust-toolchain.toml
.cargo/: config.toml
benches/: agent_loop.rs
examples/: inspect_memory.rs  list_tools.rs  run_agent_cli.rs
frontend/: .eslintrc.cjs  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/bindings/: index.ts  ipc.ts  palette.ts  types.ts
frontend/src/components/approval/: ApprovalDialog.tsx  ApprovalLayer.tsx  ApprovalToast.tsx
frontend/src/components/chat/: ChatHeader.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  StreamingIndicator.tsx  ToolCallBlock.tsx
frontend/src/components/layout/: ChatPanel.tsx  Sidebar.tsx  ToolPanel.tsx
frontend/src/components/palette/: CommandPalette.tsx
frontend/src/components/settings/: SettingsModal.tsx
frontend/src/components/sidebar/: NewSessionButton.tsx  SessionItem.tsx  SessionList.tsx  SessionSearch.tsx
frontend/src/components/tools/: ToolTimelineItem.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Dialog.tsx  Input.tsx  ScrollArea.tsx  Spinner.tsx  index.ts
frontend/src/hooks/: useAgentEvents.ts  useApprovalEvents.ts  useCopyToClipboard.ts  useDebounce.ts  usePalette.ts  useSchedulerEvents.ts
frontend/src/lib/: format.ts
frontend/src/store/: approvalStore.ts  chatStore.ts  configStore.ts  index.ts  memoryStore.ts  schedulerStore.ts  sessionStore.ts  toolStore.ts
scripts/: gen_icons.py
src/: Cargo.toml  error.rs  lib.rs  state.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/agent/: agent.rs  config.rs  event.rs  loop_state.rs  mod.rs  prompt.rs
src/agent/brain/: context_manager.rs  episode_memory.rs  memory_tiering.rs  mod.rs  planner.rs  reflection.rs  sub_agents.rs  tool_selector.rs
src/browser/: manager.rs  mod.rs  page.rs
src/commands/: approval.rs  browser.rs  chat.rs  config.rs  custom_provider.rs  file_upload.rs  memory.rs  mod.rs  palette.rs  scheduler.rs  session.rs  tool.rs
src/config/: app_config.rs  mod.rs  paths.rs  provider_config.rs  store.rs
src/database/: mod.rs  pool.rs
src/database/migrations/: 0001_init.sql  0002_embedding_dim.sql  0003_indexes.sql
src/database/repositories/: command_log_repo.rs  memory_repo.rs  message_repo.rs  mod.rs  session_repo.rs  task_repo.rs
src/llm/: anthropic.rs  custom.rs  error.rs  factory.rs  mock.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  provider.rs  streaming.rs  types.rs
src/memory/: cosine.rs  embedding.rs  long_term.rs  mod.rs  model.rs  short_term.rs  store.rs
src/observability/: mod.rs
src/scheduler/: job.rs  mod.rs  nlp.rs  persistence.rs  service.rs
src/security/: approval.rs  blacklist.rs  mod.rs  permission.rs  sandbox.rs
src/tools/: context.rs  mod.rs  registry.rs  schema.rs  tests.rs  tool.rs
src/tools/browser/: click.rs  extract_text.rs  mod.rs  navigate.rs  screenshot.rs  type_text.rs  wait.rs
src/tools/code/: mod.rs  run_javascript.rs  run_python.rs  tests.rs
src/tools/file/: append_file.rs  copy_file.rs  create_directory.rs  delete_file.rs  list_directory.rs  mod.rs  move_file.rs  read_file.rs  search_files.rs  tests.rs  write_file.rs
src/tools/memory/: delete.rs  mod.rs  recall.rs  save.rs
src/tools/scheduler/: cancel_scheduled.rs  list_scheduled.rs  mod.rs  schedule_one_time.rs  schedule_recurring.rs
src/tools/search/: brave.rs  duckduckgo.rs  mod.rs  provider.rs  tests.rs  web_search_tool.rs
src/tools/shell/: blacklist.rs  mod.rs  run_command.rs  tests.rs
src/utils/: ids.rs  json.rs  mod.rs  time.rs  truncate.rs
tests/: agent_loop_integration.rs  browser_smoke.rs  ipc_contract_tests.rs  llm_streaming_integration.rs  memory_integration.rs  scheduler_integration.rs  security_sandbox_integration.rs  tools_code_integration.rs  tools_file_integration.rs  tools_shell_integration.rs
tests/common/: mod.rs
